unpackaged/main/default/objects/Contract_contacts__c/Contract_contacts__c.object-meta.xml
<CustomObject>
    <label>SO Contract Role Details</label>
    <nameField>
        <displayFormat>CRC-{0000}</displayFormat>
        <label>ContactRoleContract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SO Contract Role Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>