unpackaged/main/default/objects/Contract_contacts__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Contract_contacts</relationshipName>
    <type>Lookup</type>
</CustomField>