unpackaged/main/default/objects/Contract_contacts__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <label>Contact Name</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>