unpackaged/main/default/objects/Contract_contacts__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <label>Employee Name</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>