unpackaged/main/default/objects/Contract_contacts__c/fields/SO_Contract_opp__c.field-meta.xml
<CustomField>
    <fullName>SO_Contract_opp__c</fullName>
    <label>SO Contract opp</label>
    <referenceTo>SO_Contract_opp__c</referenceTo>
    <relationshipName>Contract_contacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>